# fasp4ns

./: .Makefile.swp  .gitignore  CMakeLists.txt  Makefile  make.inc  make.inc.example
demo/N-S model/: .main.cpp.swp  stokes.ufl
demo/N-S model/ufl/P2P1/: stokes.ufl
demo/NS/: CMakeLists.txt  fasp_solver.cpp  fasp_solver.h  main.cpp  stokes.h
demo/NS/ufl/P2P1/: stokes.h
demo/Stokes/: CMakeLists.txt  fasp_solver.cpp  fasp_solver.h  main.cpp  stokes.h
demo/Stokes/ufl/stokes/P1P1 with stabilization/: main.cpp  stokes.h
demo/Stokes/ufl/stokes/P2P0/: stokes.h  stokes.ufl
demo/Stokes/ufl/stokes/P2P1/: main.cpp  stokes.ufl
demo/stokes/: .main.cpp.swp  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  pressure000000.vtu  test  velocity000000.vtu
demo/stokes/include/: fasp4ns_functs.h
demo/stokes/ufl/stokes/P1P1 with stabilization/: stokes.ufl
demo/stokes/ufl/stokes/P2P1/: stokes.h
dld/: Makefile  aclhgmres.for  fasp4ell.for  fasp4ns.for  make.inc
doc/: fasp4ns.Doxygen.cnf
fsi/: Makefile  aclhgmres.for  fasp4ell.for  fasp4ns.for
include/: fasp4ns.h  fasp4ns_const.h  fasp4ns_functs.h  messages_ns.h
log/: CHANGES  FILES
main/: NavierStokes.c  NavierStokes.f90  SB2DInterfaceBLC.f90  SB3DInterfaceBLC.f90  SBInterfaceBLC.f90  Stokes-Brinkman-5circle.f90  Stokes-Brinkman.f90  StokesBrinkman2D.f90  StokesBrinkman3D.f90  StokesBrinkman3DBSR.f90  StokesBrinkman5cicle.f90  matrixsolverFasp.f90  ns.c  ns.f90
modules/: FindFASP.cmake
src/: AuxInput.c  AuxParam.c  BlaIO.c  PreNavierStokes.c  PrePNPStokes.c  SolNavierStokes.c  SolPNPStokes.c  SolWrapper.c  assemble.bak  assemble.c  assemble_util.inl  basisP0.inl  basisP2.inl  functs.inl  init.c  input.c  io.c  itsolver_ns.c  itsolver_pnp_stokes.c  parameters.c  pgcr_block.c  precond_ns.c  precond_pnp_stokes.c  pvfgmres_block.c  wrapper.c
util/: fhead.sh  mkheaders.awk  stat.sh
vs10/: fasp4ns-vs10.sln
vs10/StokesBrinkman/: StokesBrinkman.vfproj
vs10/StokesBrinkman2D/: StokesBrinkman2D.vfproj
vs10/StokesBrinkman3D/: StokesBrinkman3D.vfproj
vs10/fasp4ns_lib/: fasp4ns_lib.vcxproj
vs15/StokesBrinkman2D/: StokesBrinkman2D.vfproj
vs15/StokesBrinkman3D/: StokesBrinkman3D.vfproj
vs15/fasp4ns_lib/: fasp4ns_lib.vcxproj
vs19/HemoFSIfasp4ell/: HemoFSIfasp4ell.vfproj
vs19/HemoFSIfasp4ns/: HemoFSIfasp4ns.vfproj
vs19/StokesBrinkman2D/: StokesBrinkman2D.vfproj
vs19/StokesBrinkman3D/: StokesBrinkman3D.vfproj
vs19/fasp4ns_lib/: fasp4ns_lib.vcxproj
vs22/: fasp4ns.sln
vs22/DldFSIfasp4ell/: DLDfasp4ell.vfproj
vs22/DldFSIfasp4ns/: DLDfasp4ns.vfproj  fasp4ns.vfproj
vs22/HemoFSIfasp4ell/: HemoFSIfasp4ell.u2d  HemoFSIfasp4ell.vfproj
vs22/HemoFSIfasp4ns/: HemoFSIfasp4ns.vfproj
vs22/StokesBrinkman2D/: StokesBrinkman2D.vfproj
vs22/StokesBrinkman3D/: StokesBrinkman3D.u2d  StokesBrinkman3D.vfproj
vs22/fasp4ns_lib/: fasp4ns_lib.vcxproj
